Set job IDs for mixed statuses